<resources>
    <string name="app_name">Slack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="info">Create an account and access thousand \nof cool stuff</string>
    <string name="getting_started">Getting Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="mention">mention</string>
    <string name="chats">chats</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>