<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_dashboard" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_mail"
            android:title="@string/chats" />
        <item
            android:id="@+id/nav_mention"
            android:icon="@drawable/ic_at_sign"
            android:title="@string/mention" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile"/>
    </group>
</menu>