<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.slack.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/login"
        android:name="com.example.slack.ui.login.Login"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/sign_up"
        android:name="com.example.slack.ui.signup.SignUp"
        android:label="Sign up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_sign_up_to_login"
            app:destination="@id/login"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popUpTo="@id/sign_up"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/onboarding"
        android:name="com.example.slack.ui.Onboarding"
        android:label="Onboarding"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboarding_to_sign_up"
            app:destination="@id/sign_up"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popUpTo="@id/sign_up"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_onboarding_to_login"
            app:destination="@id/login"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popUpTo="@id/login"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.slack.ui.chats.Chats"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chats"/>
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.slack.ui.dashboard.Dashboard"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.slack.ui.profile.Profile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/nav_mention"
        android:name="com.example.slack.ui.mention.Mention"
        android:label="@string/mention"
        tools:layout="@layout/fragment_mention"/>

</navigation>